--- a/app/elements/logis/job-batch.html
+++ b/app/elements/logis/job-batch.html
@@ -396,7 +396,12 @@ Copyright © HatioLab Inc. All rights reserved.
             // 주문 가공 페이지로 이동
             if (row && row.job_type) {
               var jobType = row.job_type.toLowerCase();
-              if (jobType === 'rtn3') jobType = 'rtn';
+              if (jobType === 'rtn3') {
+                jobType = 'rtn';
+              } else if(jobType === 'sms') {
+                jobType = 'sms';
+              }
+              
               var routing = '/' + jobType + '_preprocess';
 
               for (var i = 0, keys = Object.keys(row), len = keys.length; i < len; i++) {
