--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -9,3 +9,4 @@
 <link rel="import" href="./invoice-no.html" />
 <link rel="import" href="./job-batch.html" />
 <link rel="import" href="./rtn-preprocess.html" />
+<link rel="import" href="./sms-preprocess.html" />
