--- a/app/elements/logis/job-batch.html
+++ b/app/elements/logis/job-batch.html
@@ -447,7 +447,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 break;
               case 'SRTN':
                 {
-
+                  this._instructSDASBatchProcess(checkedRow);
                 }
                 break;
             }
